--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -8,19 +8,19 @@
     <nav class="menu">
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="" class="menu-link">Link 1</a>
+                <a href="" class="menu-link">Login</a>
             </li>
             <li class="menu-item">
-                <a href="" class="menu-link">Link 2</a>
+                <a href="" class="menu-link">Register</a>
             </li>
         </ul>
     </nav>
 
     <div class="search">
-        <form action="" method="get">
+        <form action="{% url "contact:search" %}" method="get">
             <input 
                 type="search" class="search-input" placeholder="Search" 
-                id="search" name="q"
+                id="search" name="q" value="{{ request.GET.q }}"
             >
         </form>
     </div>
