--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -11,7 +11,7 @@
                 <a href="" class="menu-link">Login</a>
             </li>
             <li class="menu-item">
-                <a href="" class="menu-link">Register</a>
+                <a href="{% url "contact:create" %}" class="menu-link">Register</a>
             </li>
         </ul>
     </nav>
